--- a/src/main/resources/templates/hello.html
+++ b/src/main/resources/templates/hello.html
@@ -5,6 +5,6 @@
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 </head>
 <body>
-<p th:text="'안녕하세요.123123 ' + ${data}" >안녕하세요. 손님</p>
+<p th:text="'안녕하세요. ' + ${data}" >안녕하세요. 손님</p>
 </body>
 </html>
